Bug 1339625 - Unlock textures before calling updated r=kats