gfx/layers/wr/WebRenderPaintedLayer.cpp
@@ -18,10 +18,12 @@ namespace layers {
 using namespace mozilla::gfx;
 
 void
-WebRenderPaintedLayer::PaintThebes()
+WebRenderPaintedLayer::PaintThebes(nsTArray<ReadbackProcessor::Update>* aReadbackUpdates)
 {
   PROFILER_LABEL("WebRenderPaintedLayer", "PaintThebes",
     js::ProfileEntry::Category::GRAPHICS);
+
+  mContentClient->BeginPaint();
 
   uint32_t flags = RotatedContentBuffer::PAINT_CAN_DRAW_ROTATED;
 
@@ -66,6 +68,9 @@ WebRenderPaintedLayer::PaintThebes()
     mContentClient->ReturnDrawTargetToBuffer(target);
     didUpdate = true;
   }
+
+  mContentClient->EndPaint(aReadbackUpdates);
+
   if (didUpdate) {
     Mutated();
 
@@ -100,10 +105,7 @@ WebRenderPaintedLayer::RenderLayerWithReadback(ReadbackProcessor *aReadback)
     aReadback->GetPaintedLayerUpdates(this, &readbackUpdates);
   }
 
-  IntPoint origin(mVisibleRegion.GetBounds().x, mVisibleRegion.GetBounds().y);
-  mContentClient->BeginPaint();
-  PaintThebes();
-  mContentClient->EndPaint(&readbackUpdates);
+  PaintThebes(&readbackUpdates);
 }
 
 void
